# CarnoKit

./: .gitattributes  .gitignore  LICENSE  README.md  config.example.ini  config.ini.example  pyproject.toml
bot/: config.py  dockerctl.py  main.py  requirements.txt  test_rcon.py
bot/cogs/: admin.py  chat.py  cluster.py  logs.py  players.py  scheduler.py  server.py  updater.py
bot/rcon/: __init__.py  client.py  protocol.py
bot/services/: chat_bridge.py  log_watcher.py  update_checker.py
bot/utils/: embeds.py  formatting.py  pagination.py  permissions.py
crash_analyzer/: analyze.py  parser.py
deploy/: .env.example  01-setup-vps.sh  02-deploy-cluster.sh  03-setup-tooling.sh  04-apply-rates.sh  README.md  auto-update.sh  docker-compose.yml  steps.txt  test-rcon.sh
deploy/systemd/: asa-autoupdate.service  asa-autoupdate.timer  asa-bot.service  asa-watchdog.service
watchdog/: rcon.py  watchdog.py
