[project]
name = "carnokit"
version = "0.6.0"
description = "Game server management toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
bot = [
    "discord.py>=2.4.0",
    "croniter>=3.0.0",
]
watchdog = [
    "psutil>=5.9.0",
]
all = [
    "discord.py>=2.4.0",
    "croniter>=3.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Repository = "https://github.com/Tristan-Duin/CarnoKit"
